# cookiecutter-pypackage

./: cookiecutter.json
hooks/: post_gen_project.py
{{cookiecutter.project_slug}}/: .travis.yml  setup.cfg  setup.py
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/utils/: package_data.py
