
[metadata]
name = {{ cookiecutter.project_slug }}
description = {{ cookiecutter.project_short_description }}
long_description = file:README.md
long_description_content_type = text/markdown
url = https://github.com/{{ cookiecutter.github_username }}/{{ cookiecutter.project_slug }}
author_email = {{ cookiecutter.email }}
author = {{ cookiecutter.full_name.replace('\"', '\\\"') }}
requires_python = >=3.3.0
license = GPL-2+

classifiers =
    Development Status :: 2 - Pre-Alpha
    Environment :: Console
    Intended Audience :: Science/Research
    License :: OSI Approved :: GNU General Public License v2 or later (GPLv2+)
    Operating System :: POSIX
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Scientific/Engineering :: Physics

project_urls =
    Bug Tracker = https://github.com/grburgess/{{ cookiecutter.project_slug }}/issues
    Source Code = https://github.com/grburgess/{{ cookiecutter.project_slug }}


[options]
packages = find:
install_requires =
    numpy
    matplotlib


tests_require =
    pytest
    pytest-codecov


[tool:pytest]
# Options for py.test:
# Specify command line options as you would do when invoking py.test directly.
# e.g. --cov-report html (or xml) for html/xml output or --junitxml junit.xml
# in order to write a coverage file that can be read by Jenkins.
addopts = --color=yes --cov={{ cookiecutter.project_slug }} --cov-report=term -ra --ignore={{ cookiecutter.project_slug }}/test --ignore={{ cookiecutter.project_slug }}/_version.py
log_cli = 1
log_cli_level = INFO
testpaths = {{ cookiecutter.project_slug }}/test 
norecursedirs = {{ cookiecutter.project_slug }}/test


[versioneer]
VCS=git
style=pep440
versionfile_source={{ cookiecutter.project_slug }}/_version.py
versionfile_build={{ cookiecutter.project_slug }}/_version.py
tag_prefix=v
parentdir_prefix={{ cookiecutter.project_slug }}-

